[tool.poetry]
name = "python-experiments"
version = "0.1.0"
description = ""
authors = ["Jakub Ostrzołek <kubaostrzolek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qiskit = "^0.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
