[tool.poetry]
name = "python-experiments"
version = "0.1.0"
description = ""
authors = ["Jakub Ostrzołek <kubaostrzolek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
qiskit = "^0.44.1"
numpy = "^1.23.0"
qiskit-aer = "^0.12.2"
matplotlib = "^3.8.0"
ipython = "^8.16.0"
ipywidgets = "^8.1.1"
qiskit-ibmq-provider = "^0.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
